<resources>
    <string name="app_name">AGAP</string>
    <string name="title_activity_maps_police">Map</string>
    <string name="title_activity_maps_fire">Map</string>
    <string name="title_activity_maps_disaster">Map</string>
    <string name="title_activity_maps_hospital">Map</string>
    <string name="title_activity_user_report_police">UserReportPolice</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_responder">Responder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="upload">Upload</string>
    <string name="back">Back</string>
    <string name="log_out">Log out</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="hospital">HOSPITAL</string>
    <string name="responder_activity">RESPONDER ACTIVITY</string>


    <string-array name="usertype">
        <item>Fire Department</item>
        <item>Disaster Department</item>
        <item>Police Department</item>
        <item>Hospital Department</item>

    </string-array>


</resources>
